✏️ 更新《Promise 必知必会》

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: imbAnt's blog
-subtitle: 'Be The Person You Want To Meet'
+subtitle: ''
 description: ''
 keywords: Front-End,Web Developer,Blog
 author: imbant
