--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexo-site",
+  "name": "imbant-blog",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,20 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "6.0.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "hexo": "^6.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-pug": "^1.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-sass": "^0.4.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-server": "^3.0.0",
+    "hexo-theme-landscape": "^0.0.3"
   }
 }
