--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -105,17 +105,17 @@ menu:
   - page: about
     directory: about/
     icon: fa-user
-  - page: rss
-    directory: atom.xml
-    icon: fa-rss
+  # - page: rss
+  #   directory: atom.xml
+  #   icon: fa-rss
 
 widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts, recent_comments and links.
   - search
-  - category
-  - tag
-  - recent_posts
-  - recent_comments
-  - links
+  # - category
+  # - tag
+  # - recent_posts
+  # - recent_comments
+  # - links
 
 links:
   - title: site-name1
@@ -125,15 +125,15 @@ links:
   - title: site-name3
     url: http://www.example3.com/
 
-timeline:
-  - num: 1
-    word: 2014/06/12-Start
-  - num: 2
-    word: 2014/11/29-XXX
-  - num: 3
-    word: 2015/02/18-DDD
-  - num: 4
-    word: More
+# timeline:
+#   - num: 1
+#     word: 2014/06/12-Start
+#   - num: 2
+#     word: 2014/11/29-XXX
+#   - num: 3
+#     word: 2015/02/18-DDD
+#   - num: 4
+#     word: More
 
 # Static files
 js: js
