--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,13 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "13.14.0"
+
       - name: install and build
         run: |
+          node -v
           npm ci
           npm run build
 
