seo 优化：图片加 alt 属性；增加 keywords 和 description meta；清理覆盖率低，包体又大的 css

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: imbAnt's blog
 subtitle: ''
-description: ''
-keywords: Front-End,Web Developer,Blog
+description: 'imbant 前端工程师技术博客'
+keywords: 前端,imbant,技术博客,浏览器,Electron,React,Vue,Node,Webpack,Vite,Chrome
 author: imbant
 language: zh-CN
 timezone: ''
