--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -94,6 +94,10 @@ copycode: true ## If you want to enable one-click copy of the code blocks, set t
 dark: false ## If you want to use the dark mode theme, set the value to true. Note: This feature is not complete, please open an issue if you have any problem.
 totop: true ## If you want to use the rocketship button to return to the top, set the value to true.
 external_css: false ## If you want to load an external CSS file, set the value to true and create a file named "external.css" in the source/css folder.
+sitemap:
+  rel: true
+  tags: true
+  categories: true
 
 menu:
   - page: home
